2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c (stk600_xprog_paged_write): Fix a fatal miscalculation
	of the number of bytes to be written which caused a malloc chunk
	corruption.

2008-07-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	First implementation of ATxmega support.  By now, only the
	PDI mode of the STK600 is supported.  Single-byte EEPROM
	(and flash) updates do not work yet.
	* avr.c: "boot" memory is a candidate memory region for paged
	operations, besides "flash" and "eeprom".
	* avrdude.conf.in: add ATxmega128A1 and ATxmega128A1revD
	* avrpart.h: add the AVRPART_HAS_PDI flag (used to distinguish
	ATxmega parts from classic AVRs), the nvm_base part field, and
	the offset field for a memory region.
	* config_gram.y: add "has_pdi", "nvm_base", and "offset"
	* lexer.l: (Ditto.)
	* main.c: disable auto_erase for ATxmega parts
	* stk500v2.c: implement the XPROG functionality, and divert to
	this for ATxmega parts
	* avrdude.1: Document the changes.
	* doc/avrdude.texi: (Ditto.)

2008-07-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix a bunch of warnings.
	* avr910.c (avr910_paged_load): possible unitialized use of
	rd_size
	* jtagmkI.c (jtagmkI_initialize): pointer signedness mixup
	* jtagmkII.c (jtagmkII_print_parms1): propagate const'ness
	of parameter
	* usbasp.c (usbasp_transmit): pointer signedness mixup
	* ser_avrdoper.c (usbGetReport): remove useless pointer deref

2008-07-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Ville Voipio:
	patch #6501: New autotools support for avrdude
	* Makefile.am: add @WINDOWS_DIRS@ to SUBDIR
	* bootstrap: allow for autconf-2.61 and automake-1.10, too
	* configure.ac: fix @WINDOWS_DIRS@ recursion, replace
	AC_PROG_CC by AM_PROG_CC_C_O, for esoteric reasons

2008-06-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Janos Sallai <janos.sallai@vanderbilt.edu>:
	patch #6074: added support for crossbow's MIB510 programmer
	* avrdude.conf.in: Add entry for mib510.